--- a/scss/all.css
+++ b/scss/all.css
@@ -67,10 +67,9 @@ body {
       -ms-flex: 1;
           flex: 1;
   border: none;
-  border-bottom: 2px solid #333333;
   background-color: #fff;
   font-size: 14px;
-  color: #333333;
+  color: #9F9A91;
   letter-spacing: 0.7px;
 }
 
@@ -196,12 +195,28 @@ body {
           justify-content: space-between;
 }
 
-.llli {
-  display: inline-block;
-  width: 19px;
-  height: 19px;
-  margin: -2px 10px 0 0;
-  vertical-align: middle;
-  cursor: pointer;
+.container .footer .rest {
+  font-size: 14px;
+  color: #333333;
+  letter-spacing: 0.7px;
+  padding: 24px 32px;
+}
+
+.container .footer .clear {
+  font-size: 14px;
+  color: #9F9A91;
+  letter-spacing: 0.7px;
+  border: none;
+  background-color: #fff;
+  padding: 32px 47px;
+}
+
+.check {
+  width: 20px;
+  height: 20px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  border-radius: 5px;
 }
 /*# sourceMappingURL=all.css.map */
