--- a/scss/all.scss
+++ b/scss/all.scss
@@ -8,7 +8,6 @@ $black: #333333;
     width: $w;
     height: $h;
 }
-
 * {
     // border: solid 1px;
 }
@@ -27,10 +26,8 @@ body {
     margin: 0;
     padding: 20px;
 }
-
 .container{
     @include center;
-    
     width: 500px;
     flex-direction: column;
     position: relative;
@@ -47,11 +44,10 @@ body {
             input {
                 padding: 16px;
                 flex: 1;
-                border: none;
-                border-bottom: 2px solid #333333;;
+                border: none;                
                 background-color: #fff;
                 font-size: 14px;
-                color: #333333;
+                color: #9F9A91;
                 letter-spacing: 0.7px;
             }
         }
@@ -69,13 +65,11 @@ body {
                 justify-content: center;
                 padding: 0;   
                 margin: 0;
-                list-style: none;
-                
+                list-style: none;       
                 &:hover
                     .delete {
                         opacity: 1
                     }
-
                 .check {
                     @include size(20px, 20px);
                     flex: 1;
@@ -102,13 +96,9 @@ body {
                     opacity: 0;
                     transition: 0.2s;
                 }
-                
             }
-            
-            
         }
     }
-
     .text_bar {
         display: flex;
         align-items: center;
@@ -138,16 +128,25 @@ body {
     }
     .footer {
         display: flex;
-        justify-content: space-between;
+        justify-content: space-between;  
+        .rest {
+            font-size: 14px;
+            color: #333333;
+            letter-spacing: 0.7px;
+            padding: 24px 32px;
+        }   
+        .clear {
+            font-size: 14px;
+            color: #9F9A91;
+            letter-spacing: 0.7px;
+            border: none;
+            background-color: #fff;
+            padding: 32px 47px;
+        }
     }
 }
-
-.llli {
-    display:inline-block;
-    width:19px;
-    height:19px;
-    margin:-2px 10px 0 0;
-    vertical-align:middle;
-
-    cursor:pointer;
+.check {
+    @include size(20px, 20px);
+    flex: 1;
+    border-radius: 5px;
 }
