--- a/scss/all.scss
+++ b/scss/all.scss
@@ -65,7 +65,8 @@ body {
                 justify-content: center;
                 padding: 0;   
                 margin: 0;
-                list-style: none;       
+                list-style: none;  
+                background-color: #fff;     
                 &:hover
                     .delete {
                         opacity: 1
@@ -81,8 +82,8 @@ body {
                     font-size: 16px;
                     color: #333333;
                     letter-spacing: 0.62px;
-                    padding: 16px 0;
-                    margin: 0;                    
+                    // padding: 16px 0;
+                    // margin: 24px;                    
                 }
                 .delete {
                     @include center;
@@ -91,6 +92,7 @@ body {
                     font-size: 16px;
                     font-weight: 600;
                     padding: 3px;
+                    margin-bottom: 10px;
                     flex: 1;
                     background-color: #fff;
                     opacity: 0;
@@ -149,4 +151,50 @@ body {
     @include size(20px, 20px);
     flex: 1;
     border-radius: 5px;
+}
+
+input[type='checkbox'] {
+    display: none;
+}
+
+input[type='checkbox']+label {
+/*設定選項與選項之間的距離*/
+    margin: 0 0px;
+    border-bottom: 3px solid black;
+}
+
+input[type='checkbox']+label::before {
+    content: "";
+    font-size: 30px;
+    float: left;          /*設定選項樣式的位置*/
+    width: 20px;          /*設定選項樣式的寬高*/
+    height: 20px;
+    background-color: #fff; 
+    border: 1px solid #333333;  /*設定選項樣式的邊框*/
+    border-radius: 5px;   /*設定選項樣式為圓圈*/
+    margin-right: 20px;    /*設定圓圈與文字之間的距離*/
+    margin-top: 3px;
+    box-sizing: border-box;
+}
+
+input[type='checkbox']:checked+label::before {
+    position: relative;
+    top: -10px;
+    content: "✔";
+    color: #FFD370;
+    border: none;
+    background-clip: content-box;
+}
+
+.todo {
+    display: flex;
+    justify-content: flex-start;
+}
+
+label {
+    @include center;
+    padding-bottom: 10px;
+    cursor: pointer;
+    margin-left: 30px;
+    width: 100%;
 }
