--- a/scss/all.css
+++ b/scss/all.css
@@ -62,7 +62,7 @@ body {
   width: 100%;
 }
 
-.container .main_list .mian_btn input {
+.container .main_list .mian_btn .btn {
   padding: 16px;
   -webkit-box-flex: 1;
       -ms-flex: 1;
@@ -72,6 +72,11 @@ body {
   font-size: 14px;
   color: #9F9A91;
   letter-spacing: 0.7px;
+}
+
+.container .main_list .mian_btn .btn_active {
+  border-bottom: 2px solid #333333;
+  color: #333333;
 }
 
 .container .main_list .list {
@@ -107,6 +112,10 @@ body {
   opacity: 1;
 }
 
+.container .main_list .list li:hover .delete_notyet {
+  opacity: 1;
+}
+
 .container .main_list .list li .check {
   width: 20px;
   height: 20px;
@@ -127,6 +136,32 @@ body {
 }
 
 .container .main_list .list li .delete {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 20px;
+  height: 20px;
+  border: none;
+  font-size: 16px;
+  font-weight: 600;
+  padding: 3px;
+  margin-bottom: 10px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  background-color: #fff;
+  opacity: 0;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.container .main_list .list li .delete_notyet {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
