--- a/scss/all.scss
+++ b/scss/all.scss
@@ -40,7 +40,7 @@ body {
         .mian_btn {            
             display: flex;
             width: 100%;
-            input {
+            .btn {
                 padding: 16px;
                 flex: 1;
                 border: none;                
@@ -48,6 +48,10 @@ body {
                 font-size: 14px;
                 color: #9F9A91;
                 letter-spacing: 0.7px;
+            }
+            .btn_active {
+                border-bottom: 2px solid #333333;
+                color: #333333;
             }
         }
         .list {            
@@ -70,6 +74,10 @@ body {
                     .delete {
                         opacity: 1
                     }
+                &:hover
+                    .delete_notyet{
+                        opacity: 1
+                    }
                 .check {
                     @include size(20px, 20px);
                     flex: 1;
@@ -85,6 +93,19 @@ body {
                     // margin: 24px;                    
                 }
                 .delete {
+                    @include center;
+                    @include size(20px,20px);                    
+                    border: none;
+                    font-size: 16px;
+                    font-weight: 600;
+                    padding: 3px;
+                    margin-bottom: 10px;
+                    flex: 1;
+                    background-color: #fff;
+                    opacity: 0;
+                    transition: 0.2s;
+                }
+                .delete_notyet {
                     @include center;
                     @include size(20px,20px);                    
                     border: none;
