--- a/scss/main.css
+++ b/scss/main.css
@@ -51,8 +51,8 @@ h1 {
 }
 
 .container .main_list {
-  width: 100%;
   height: 100%;
+  width: 100%;
   background-color: #fff;
   -webkit-box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.15);
           box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.15);
@@ -90,15 +90,15 @@ h1 {
 }
 
 .container .main_list .list ul {
-  width: 100%;
-  height: 100px;
+  height: 100%;
+  width: 100px;
   padding: 0;
   margin: 0;
 }
 
 .container .main_list .list li {
-  width: 100%;
-  height: 50px;
+  height: 100%;
+  width: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -121,8 +121,8 @@ h1 {
 }
 
 .container .main_list .list li .check {
-  width: 20px;
   height: 20px;
+  width: 20px;
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
@@ -151,8 +151,8 @@ h1 {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 20px;
   height: 20px;
+  width: 20px;
   border: none;
   font-size: 16px;
   font-weight: 600;
@@ -191,8 +191,8 @@ h1 {
 }
 
 .container .text_bar .save {
-  width: 40px;
   height: 40px;
+  width: 40px;
   border-radius: 10px;
   position: absolute;
   right: 0px;
@@ -228,8 +228,8 @@ h1 {
 }
 
 .check {
-  width: 20px;
   height: 20px;
+  width: 20px;
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
@@ -247,8 +247,8 @@ input[type='checkbox'] + label {
 }
 
 input[type='checkbox'] + label::before {
-  width: 20px;
   height: 20px;
+  width: 20px;
   content: "";
   font-size: 30px;
   float: left;
@@ -291,4 +291,4 @@ label {
   -webkit-transform: translateX(90px);
           transform: translateX(90px);
 }
-/*# sourceMappingURL=all.css.map */
+/*# sourceMappingURL=main.css.map */
