--- a/scss/main.css
+++ b/scss/main.css
@@ -97,8 +97,8 @@ h1 {
 }
 
 .container .main_list .list li {
-  height: 100%;
-  width: 50px;
+  height: 50px;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
